Add images and Button Component

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -4,14 +4,34 @@
 	font-size: 2rem;
 	line-height: 6rem;
 	padding: 0 4rem;
+	width: 22rem;
 	color: white;
 	border: 0.1rem solid #fdb533;
 	border-radius: 0.5rem;
 	cursor: pointer;
 	transition: 0.5s;
+
+	&:hover {
+		background-color: #3c3c3d;
+		color: #fdb533;
+	}
 }
 
-.yellow-button:hover {
+.grey-button {
 	background-color: #3c3c3d;
+	font-weight: 500;
+	font-size: 2rem;
+	line-height: 6rem;
+	padding: 0 4rem;
+	width: 22rem;
 	color: #fdb533;
+	border: 0.1rem solid #fdb533;
+	border-radius: 0.5rem;
+	cursor: pointer;
+	transition: 0.5s;
+
+	&:hover {
+		background-color: #fdb533;
+		color: #3c3c3d;
+	}
 }
