Fix issue with logo position, modal button responsive position and add screen to media queries.

--- a/src/components/Closing/closing.scss
+++ b/src/components/Closing/closing.scss
@@ -13,7 +13,7 @@ $bp-small: 41em; // 656px
 	flex-direction: column;
 	align-items: center;
 
-	@media (max-width: $bp-small) {
+	@media screen and (max-width: $bp-small) {
 		padding: 5rem 2rem 5rem 2rem;
 	}
 
