--- a/src/components/About-Me/about-me.scss
+++ b/src/components/About-Me/about-me.scss
@@ -11,7 +11,7 @@ $bp-small: 41em; // 656px
 	display: grid;
 	padding: 10rem 0;
 
-	@media (max-width: $bp-small) {
+	@media screen and (max-width: $bp-small) {
 		padding: 4rem 2rem;
 	}
 	background-color: #3c3c3d;
@@ -21,7 +21,7 @@ $bp-small: 41em; // 656px
 
 	&-content {
 		padding-right: 15rem;
-		@media (max-width: $bp-small) {
+		@media screen and (max-width: $bp-small) {
 			padding: 4rem 2rem;
 		}
 
@@ -36,7 +36,7 @@ $bp-small: 41em; // 656px
 	}
 
 	&-buttons {
-		@media (max-width: $bp-small) {
+		@media screen and (max-width: $bp-small) {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
