--- a/src/components/Contact-Me/contact-me.scss
+++ b/src/components/Contact-Me/contact-me.scss
@@ -24,7 +24,7 @@ $bp-small: 41em; // 656px
 		font-weight: 40rem;
 		margin-bottom: 10rem;
 
-		@media (max-width: $bp-small) {
+		@media screen and (max-width: $bp-small) {
 			justify-self: center;
 			align-self: center;
 			font-size: 4.5rem;
@@ -36,7 +36,7 @@ $bp-small: 41em; // 656px
 		grid-area: two;
 		justify-self: center;
 
-		@media (max-width: $bp-small) {
+		@media screen and (max-width: $bp-small) {
 			justify-self: start;
 			margin-bottom: 2rem;
 		}
@@ -114,7 +114,7 @@ $bp-small: 41em; // 656px
 			grid-row: 3 / 4;
 			margin-top: 1.5rem;
 
-			@media (max-width: $bp-small) {
+			@media screen and (max-width: $bp-small) {
 				grid-column: 1 / span 2;
 				grid-row: 3 / 4;
 			}
@@ -127,7 +127,7 @@ $bp-small: 41em; // 656px
 			grid-column: 1 / 2;
 			grid-row: 4 / 5;
 
-			@media (max-width: $bp-small) {
+			@media screen and (max-width: $bp-small) {
 				grid-column: 1 / span 2;
 				grid-row: 4 / 5;
 			}
@@ -138,7 +138,7 @@ $bp-small: 41em; // 656px
 			/* grid-row: 3 / 4; */
 			margin-top: 1.5rem;
 
-			@media (max-width: $bp-small) {
+			@media screen and (max-width: $bp-small) {
 				grid-column: 1 / span 2;
 				grid-row: 5 / 6;
 			}
@@ -149,7 +149,7 @@ $bp-small: 41em; // 656px
 			/* grid-row: 4 / 5; */
 			height: 6rem;
 
-			@media (max-width: $bp-small) {
+			@media screen and (max-width: $bp-small) {
 				grid-column: 1 / span 2;
 				grid-row: 6 / 7;
 			}
@@ -205,7 +205,7 @@ $bp-small: 41em; // 656px
 		}
 	}
 
-	@media (max-width: $bp-small) {
+	@media screen and (max-width: $bp-small) {
 		padding: 5rem 2rem 5rem 2rem;
 
 		grid-template-columns: auto;
