--- a/src/components/Heading-2/heading-2.scss
+++ b/src/components/Heading-2/heading-2.scss
@@ -11,7 +11,7 @@ h2 {
 	position: relative;
 	margin-bottom: 5rem;
 
-	@media (max-width: $bp-small) {
+	@media screen and (max-width: $bp-small) {
 		font-size: 4.5rem;
 	}
 
@@ -29,7 +29,7 @@ h2 {
 
 .contact-me {
 	position: absolute;
-	@media (max-width: $bp-small) {
+	@media screen and (max-width: $bp-small) {
 		font-size: 4.5rem;
 		text-align: center;
 		justify-self: start;
