--- a/src/components/Work-Experiences/work-experiences.scss
+++ b/src/components/Work-Experiences/work-experiences.scss
@@ -13,7 +13,7 @@ $bp-small: 41em; // 656px
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	@media (max-width: $bp-small) {
+	@media screen and (max-width: $bp-small) {
 		padding-left: 2rem;
 		padding-right: 2rem;
 	}
@@ -30,7 +30,7 @@ $bp-small: 41em; // 656px
 	grid-template-columns: repeat(3, 30rem);
 }
 
-@media (max-width: $bp-medium) {
+@media screen and (max-width: $bp-medium) {
 	.works-cards-container {
 		grid-template-columns: 1fr;
 	}
