add review slider functionality

--- a/src/components/Work-Experiences/work-experiences.scss
+++ b/src/components/Work-Experiences/work-experiences.scss
@@ -9,7 +9,7 @@ $bp-small: 41em; // 656px
 .work-experiences {
 	grid-column: full-start / full-end;
 	padding: 10rem 0;
-	background-color: #3c3c3d;
+	background-color: #2b2c2c;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
