--- a/src/components/Reviews/reviews.scss
+++ b/src/components/Reviews/reviews.scss
@@ -6,40 +6,141 @@ $bp-medium: 50em; // 800px
 //656 / 16
 $bp-small: 41em; // 656px
 
-.reviews-section {
+.section {
 	grid-column: full-start / full-end;
-	padding: 5rem 0;
+	padding: 5rem auto;
 	background-color: #3c3c3d;
 }
 
-.reviews-slider {
-	width: 85vw;
-	max-width: 70rem;
-	margin: 0 auto;
-	margin-top: 5rem;
-	text-align: center;
-	padding: 1rem 0;
+.reviews {
+	& h2 {
+		font-weight: 40rem;
+		position: relative;
+		margin-bottom: 8rem;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding-top: 4rem;
 
-	& .reviews {
-		& h2 {
-			font-weight: 40rem;
-			position: relative;
-			margin-bottom: 8rem;
+		@media screen and (max-width: $bp-small) {
+			font-size: 4.5rem;
+		}
 
-			@media screen and (max-width: $bp-small) {
-				font-size: 4.5rem;
-			}
-
-			&::before {
-				content: '';
-				position: absolute;
-				width: 8%;
-				margin-top: 1.2rem;
-				height: 0.4rem;
-				bottom: -1rem;
-				left: 46%;
-				background-color: #fdb533;
-			}
+		&::before {
+			content: '';
+			position: absolute;
+			width: 8%;
+			margin-top: 1.2rem;
+			height: 0.4rem;
+			bottom: -1rem;
+			left: 46%;
+			background-color: #fdb533;
 		}
 	}
+}
+
+.section-center {
+	margin: 0 auto;
+	margin-top: 4rem;
+	width: 80vw;
+	/* have to have a height */
+	height: 45rem;
+	max-width: 80rem;
+	text-align: center;
+	position: relative;
+	display: flex;
+	overflow: hidden;
+}
+
+.person-img {
+	border-radius: 50%;
+	margin-bottom: 1rem;
+	width: 15rem;
+	height: 15rem;
+	object-fit: cover;
+	border: 4px solid #fdb533;
+	box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.2);
+}
+
+article h4 {
+	text-transform: uppercase;
+	font-weight: 500;
+	margin-bottom: 0.25rem;
+	margin: 0.5rem 0;
+}
+.title {
+	text-transform: capitalize;
+	margin-bottom: 0.75rem;
+	margin-bottom: 1.25rem;
+	color: whitesmoke;
+}
+.text {
+	max-width: 35em;
+	margin: 0 auto;
+	margin-top: 2rem;
+	line-height: 2;
+	color: rgb(184, 180, 180);
+}
+.icon {
+	font-size: 3rem;
+	margin-top: 2rem;
+	color: #fdb533;
+}
+//buttons
+.prev,
+.next {
+	position: absolute;
+	top: 20rem;
+	transform: translateY(-50%);
+	background: rgb(184, 180, 180);
+	color: #3c3c3d;
+	width: 1.25rem;
+	height: 1.25rem;
+	display: grid;
+	place-items: center;
+	border-color: transparent;
+	font-size: 1rem;
+	border-radius: 0.25rem;
+	cursor: pointer;
+	transition: all 0.3s linear;
+}
+.prev:hover,
+.next:hover {
+	background: #fdb533;
+}
+.prev {
+	left: 0;
+}
+.next {
+	right: 0;
+}
+@media (min-width: 800px) {
+	.text {
+		max-width: 45em;
+	}
+	.prev,
+	.next {
+		width: 2rem;
+		height: 2rem;
+		font-size: 1.5rem;
+	}
+}
+article {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	transition: all 0.3s linear;
+}
+article.activeSlide {
+	opacity: 1;
+	transform: translateX(0);
+}
+article.lastSlide {
+	transform: translateX(-100%);
+}
+article.nextSlide {
+	transform: translateX(100%);
 }
