refactor navbar style and component

--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -6,63 +6,131 @@ $bp-medium: 50em; // 800px
 //656 / 16
 $bp-small: 41em; // 656px
 
-/* grid layout for top menu and logo */
-
-.navbar {
-	grid-column: full-start / full-end;
-	grid-row: 1 / 2;
-	background-color: #2b2c2c;
+.nav-header {
 	display: flex;
-	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
-	position: fixed;
-	z-index: 100;
-	width: 100%;
+	padding: 1rem;
+}
 
-	& ul {
-		list-style-type: none;
-		padding: 0 8rem;
-		display: flex;
+.nav-toggle {
+	background: transparent;
+	border-color: transparent;
+	color: #fff;
+	font-size: 2.5rem;
+	cursor: pointer;
+	transition: all 0.3s linear;
+	margin-right: 2rem;
+}
+.nav-toggle:hover {
+	color: #fbd214;
+	transform: rotate(90deg);
+}
+
+.logo {
+	font-weight: 900;
+	font-size: 5rem;
+	line-height: 6rem;
+	margin-left: 2rem;
+	margin-top: 1.5rem;
+
+	& a {
+		color: #fbd214;
 	}
+}
 
-	&-menu {
-		font-size: 1.4rem;
+.links {
+	& a {
 		color: #fff;
+		font-size: 1.5rem;
+		text-transform: capitalize;
+		display: block;
 		font-weight: 700;
-	}
+		padding: 0.5rem 1rem;
+		transition: all 0.3s linear;
 
-	&-logo {
-		font-weight: 900;
-		font-size: 5rem;
-		line-height: 6rem;
-		margin-left: 5rem;
-		margin-top: 1.5rem;
-
-		& a {
+		&:hover {
+			color: #fbd214;
+		}
+		&:active {
 			color: #fbd214;
 		}
 	}
 
-	/* color of links when hovering over menu item: */
+	&-container {
+		height: 0;
+		overflow: hidden;
+		transition: all 0.3s linear;
+		margin-left: 2rem;
+		& .links {
+			list-style-type: none;
 
-	& ul li a:hover {
-		color: #fbd214;
+			& a {
+				font-size: 1.7rem;
+				padding: 1rem 1.5rem 0.5rem 1.5rem;
+			}
+		}
 	}
+}
 
-	& ul li a:active {
-		color: #fbd214;
+.show-container {
+	height: 10rem;
+}
+
+.nav-center {
+	grid-column: full-start / full-end;
+	background-color: #2b2c2c;
+	position: fixed;
+	z-index: 100;
+	width: 100%;
+}
+
+@media screen and (min-width: 800px) {
+	.nav-center {
+		grid-column: full-start / full-end;
+		grid-row: 1 / 2;
+		//max-width: 117rem;
+		width: 100%;
+		margin: 0 auto;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		//padding: 1rem;
+		padding-top: 1rem;
+		background-color: #2b2c2c;
+		position: fixed;
+		z-index: 100;
+	}
+	.nav-header {
+		padding: 0;
+	}
+	.nav-toggle {
+		display: none;
+	}
+	.links-container {
+		height: auto !important;
+	}
+	.links {
+		display: flex;
+		list-style-type: none;
+		padding-right: 4rem;
+	}
+	.links a {
+		margin: 0.4rem 0.5rem;
+	}
+	.logo {
+		margin-left: 4rem;
 	}
 
 	/* adding the line effect when you hover over item */
 
-	&-menu {
+	.menu {
 		position: relative;
 		margin-bottom: 0.5rem;
 		margin-left: 5rem;
 	}
 
-	&-menu::before {
+	.menu::before {
 		content: '';
 		position: absolute;
 		width: 0;
@@ -74,15 +142,16 @@ $bp-small: 41em; // 656px
 		transition: all 0.3s ease-in-out;
 	}
 
-	&-menu:hover::before {
-		width: 50%;
+	.menu:hover::before {
+		width: 40%;
 	}
 
 	/* for the active link to stay underlined  */
-	&-menu .active::before {
+
+	.menu .active::before {
 		content: '';
 		position: absolute;
-		width: 50%;
+		width: 30%;
 		margin-top: 1.2rem;
 		height: 0.2rem;
 		bottom: 0;
@@ -90,92 +159,4 @@ $bp-small: 41em; // 656px
 		background-color: #fdb533;
 		transition: all 0.3s ease-in-out;
 	}
-}
-
-@media screen and (min-width: $bp-medium) {
-	& .open {
-		display: none;
-	}
-}
-
-/*  menu item layout change with smaller screen */
-
-@media screen and (max-width: $bp-medium) {
-	.navbar {
-		align-items: stretch;
-		& ul {
-			display: none;
-		}
-	}
-}
-
-.modal-container {
-	background-color: #2b2c2c;
-	color: whitesmoke;
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	height: 32rem;
-	z-index: 100;
-	font-size: 1.5rem;
-
-	& ul {
-		list-style-type: none;
-		margin-left: 1rem;
-
-		& li {
-			margin-bottom: 2rem;
-
-			& a {
-				color: inherit;
-
-				&:hover {
-					color: #fbd214;
-				}
-			}
-		}
-	}
-
-	&-logo {
-		font-weight: 900;
-		font-size: 5rem;
-		line-height: 6rem;
-		margin: 1.5rem 0 1.5rem 1rem;
-
-		& a {
-			color: #fbd214;
-		}
-	}
-
-	& button {
-		background-color: #2b2c2c;
-		border: #2b2c2c;
-		color: #fff;
-		cursor: pointer;
-		position: absolute;
-		top: 3rem;
-		right: 3rem;
-
-		&:hover {
-			color: #fbd214;
-		}
-	}
-
-	&.show-modal {
-		display: inline-block;
-	}
-}
-
-/* open button styling */
-
-.open {
-	background-color: #2b2c2c;
-	border: #2b2c2c;
-	color: #fff;
-	position: absolute;
-	top: 2rem;
-	right: 2rem;
-	cursor: pointer;
 }
