add blurry background to modal pop up in the latest works section

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -9,6 +9,13 @@
 	transition: all 0.3s linear;
 	visibility: hidden;
 	z-index: -1;
+
+	@supports (-webkit-backdrop-filter: blur(10px)) or
+		(backdrop-filter: blur(10px)) {
+		-webkit-backdrop-filter: blur(10px);
+		backdrop-filter: blur(10px);
+		background-color: rgba(black, 0.3);
+	}
 }
 /* OPEN/CLOSE MODAL */
 .show-modal {
