--- a/src/Pages/Blog/blog.scss
+++ b/src/Pages/Blog/blog.scss
@@ -2,17 +2,19 @@
 	--clr-bcg: #54595f;
 	--clr-primary: #ffa7c4;
 	--clr-font: #fff;
+	--clr-font-btn: whitesmoke;
 }
 
 .light-theme {
 	--clr-bcg: #fff;
 	--clr-primary: #d23669;
 	--clr-font: #54595f;
+	--clr-font-btn: whitesmoke;
 }
 
 .blog-section {
 	background-color: var(--clr-bcg);
-	height: 100vh;
+	height: 100%;
 	display: grid;
 	grid-template-columns: 3;
 	grid-template-rows: repeat(2, max-content);
@@ -20,6 +22,7 @@
 	align-items: center;
 	padding-top: 10rem;
 	align-items: center;
+	padding-bottom: 5rem;
 
 	& h1 {
 		grid-column: 2/3;
@@ -33,7 +36,7 @@
 	margin-top: 2rem;
 	justify-self: start;
 	background: var(--clr-primary);
-	color: var(--clr-font);
+	color: var(--clr-font-btn);
 	padding: 0.25rem 0.5rem;
 	border-radius: 5px;
 	border-color: transparent;
