add smooth scroll links  to different sections of home page. Add back home button in blog page

--- a/src/Pages/Blog/blog.scss
+++ b/src/Pages/Blog/blog.scss
@@ -47,6 +47,15 @@
 	cursor: pointer;
 }
 
+.btn-home {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	margin: 1.5rem;
+	font-size: 1.5rem;
+	padding: 0.5rem 0.8rem;
+}
+
 .articles {
 	grid-column: 2/3;
 }
