--- a/src/Pages/Single Article/single-article.scss
+++ b/src/Pages/Single Article/single-article.scss
@@ -1,3 +1,35 @@
 .article {
-	padding-top: 10rem;
+	display: grid;
+	grid-template-columns: 1fr;
+	align-content: center;
+	gap: 2rem;
+	padding: 10rem 15%;
+
+	& h1 {
+		grid-column: 2/3;
+	}
+}
+
+.text1 {
+	grid-column: 2/3;
+}
+
+.text2 {
+	grid-column: 2/3;
+}
+
+.text3 {
+	grid-column: 2/3;
+}
+
+.date {
+	font-size: 1.5rem;
+	margin-bottom: 5rem;
+	grid-column: 2/3;
+}
+
+.btn-articles {
+	font-size: 1.5rem;
+	padding: 0.5rem 0.8rem;
+	grid-column: 2/3;
 }
