--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -23,13 +23,17 @@ $bp-small: 41em; // 656px
 	&-text {
 		display: flex;
 		flex-direction: column;
-
-		& button {
+		@media screen and (max-width: $bp-small) {
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+		}
+		/* & button {
 			align-self: flex-start;
 			@media screen and (max-width: $bp-small) {
 				align-self: center;
 			}
-		}
+		} */
 	}
 
 	&-text h1 {
@@ -45,9 +49,12 @@ $bp-small: 41em; // 656px
 
 	& img {
 		width: 70%;
-		clip-path: circle(45%);
-		justify-self: start;
 
+		justify-self: start;
+		border-radius: 49%;
+		border: 1px solid #fdb533;
+		background: #fdb533;
+		padding: 0.25rem;
 		@media screen and (max-width: $bp-small) {
 			justify-self: center;
 			margin-top: 4rem;
