--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -10,7 +10,7 @@ $bp-small: 41em; // 656px
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 1rem;
+	padding: 0 1rem;
 }
 
 .nav-toggle {
@@ -20,7 +20,7 @@ $bp-small: 41em; // 656px
 	font-size: 2.5rem;
 	cursor: pointer;
 	transition: all 0.3s linear;
-	margin-right: 2rem;
+	margin-right: 1rem;
 }
 .nav-toggle:hover {
 	color: #fbd214;
@@ -34,21 +34,21 @@ $bp-small: 41em; // 656px
 	font-weight: 900;
 	font-size: 5rem;
 	line-height: 6rem;
-	margin-left: 2rem;
-	margin-top: 1.5rem;
 	color: #fbd214;
 	background-color: #2b2c2c;
+	margin: 0.5rem 0 0.5rem 1rem;
 }
 
 .links {
+	list-style-type: none;
 	& a {
 		color: #fff;
-		font-size: 1.5rem;
 		text-transform: capitalize;
 		display: block;
 		font-weight: 700;
-		padding: 0.5rem 1rem;
 		transition: all 0.3s linear;
+		font-size: 2rem;
+		padding: 1rem 1.5rem 0.5rem 1.5rem;
 
 		&:hover {
 			color: #fbd214;
@@ -65,14 +65,6 @@ $bp-small: 41em; // 656px
 	overflow: hidden;
 	transition: all 0.3s linear;
 	margin-left: 2rem;
-	& .links {
-		list-style-type: none;
-
-		& a {
-			font-size: 1.7rem;
-			padding: 1rem 1.5rem 0.5rem 1.5rem;
-		}
-	}
 }
 
 .show-container {
@@ -91,14 +83,11 @@ $bp-small: 41em; // 656px
 	.nav-center {
 		grid-column: full-start / full-end;
 		grid-row: 1 / 2;
-		//max-width: 117rem;
 		width: 100%;
 		margin: 0 auto;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		//padding: 1rem;
-		padding-top: 1rem;
 		background-color: #2b2c2c;
 		position: fixed;
 		z-index: 100;
@@ -118,11 +107,10 @@ $bp-small: 41em; // 656px
 		padding-right: 4rem;
 	}
 	.links a {
-		margin: 0.4rem 0.5rem;
+		margin: 0 0.5rem;
 	}
 	.logo {
-		margin-left: 4rem;
-		margin-bottom: 1rem;
+		margin: 1rem 0 1rem 4rem;
 		&:hover {
 			cursor: pointer;
 		}
