--- a/src/components/Reviews/reviews.scss
+++ b/src/components/Reviews/reviews.scss
@@ -10,38 +10,14 @@ $bp-small: 41em; // 656px
 	grid-column: full-start / full-end;
 	padding: 5rem auto;
 	background-color: #3c3c3d;
-}
-
-.reviews {
-	& h2 {
-		font-weight: 40rem;
-		position: relative;
-		margin-bottom: 8rem;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		padding-top: 4rem;
-
-		@media screen and (max-width: $bp-small) {
-			font-size: 4.5rem;
-		}
-
-		&::before {
-			content: '';
-			position: absolute;
-			width: 8%;
-			margin-top: 1.2rem;
-			height: 0.4rem;
-			bottom: -1rem;
-			left: 46%;
-			background-color: #fdb533;
-		}
-	}
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .section-center {
 	margin: 0 auto;
-	margin-top: 4rem;
 	width: 80vw;
 	/* have to have a height */
 	height: 45rem;
