increase paragraph font size for whole page, change h2 title of latest works section to portfolio, increase padding top and bottom to each section mobile view only.

--- a/src/components/Contact-Me/contact-me.scss
+++ b/src/components/Contact-Me/contact-me.scss
@@ -28,12 +28,11 @@ $bp-small: 41em; // 656px
 			justify-self: center;
 			align-self: center;
 			font-size: 4.5rem;
-			padding: 5rem 24rem 5rem 0;
 		}
 	}
 
 	@media screen and (max-width: $bp-small) {
-		padding: 5rem 2rem 5rem 2rem;
+		padding: 10rem 2rem;
 
 		grid-template-columns: auto;
 		grid-template-areas:
