--- a/src/components/Hire-Me/hire-me.scss
+++ b/src/components/Hire-Me/hire-me.scss
@@ -19,6 +19,6 @@ $bp-small: 41em; // 656px
 	}
 
 	@media screen and (max-width: $bp-small) {
-		padding: 5rem 2rem 5rem 2rem;
+		padding: 10rem 2rem;
 	}
 }
