--- a/src/components/Latest-Works/latest-works.scss
+++ b/src/components/Latest-Works/latest-works.scss
@@ -11,7 +11,7 @@ $bp-small: 41em; // 656px
 	padding: 10rem 0;
 
 	@media screen and (max-width: $bp-small) {
-		padding: 5rem 2rem 5rem 2rem;
+		padding: 10rem 2rem;
 	}
 
 	&-text-box {
