--- a/src/components/Reviews/reviews.scss
+++ b/src/components/Reviews/reviews.scss
@@ -14,6 +14,10 @@ $bp-small: 41em; // 656px
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
+	@media screen and (max-width: $bp-small) {
+		padding: 6rem 2rem;
+	}
 }
 
 .section-center {
