--- a/src/components/Services/services.scss
+++ b/src/components/Services/services.scss
@@ -12,7 +12,7 @@ $bp-small: 41em; // 656px
 	background-color: #2b2c2c;
 
 	@media screen and (max-width: $bp-small) {
-		padding: 5rem 2rem 5rem 2rem;
+		padding: 10rem 2rem;
 	}
 
 	&-text-box {
