--- a/src/components/Work-Experiences/work-experiences.scss
+++ b/src/components/Work-Experiences/work-experiences.scss
@@ -14,8 +14,7 @@ $bp-small: 41em; // 656px
 	flex-direction: column;
 	align-items: center;
 	@media screen and (max-width: $bp-small) {
-		padding-left: 2rem;
-		padding-right: 2rem;
+		padding: 10rem 2rem;
 	}
 
 	& .center {
