--- a/src/components/Reviews/reviews.scss
+++ b/src/components/Reviews/reviews.scss
@@ -16,7 +16,7 @@ $bp-small: 41em; // 656px
 	align-items: center;
 
 	@media screen and (max-width: $bp-small) {
-		padding: 6rem 2rem;
+		padding: 0 2rem;
 	}
 }
 
