--- a/src/components/Contact-Me/contact-me.scss
+++ b/src/components/Contact-Me/contact-me.scss
@@ -28,13 +28,17 @@ $bp-small: 41em; // 656px
 			justify-self: center;
 			align-self: center;
 			font-size: 4.5rem;
+			margin-bottom: 2rem;
+			padding-left: 0;
 		}
 	}
 
 	@media screen and (max-width: $bp-small) {
 		padding: 10rem 2rem;
 
-		grid-template-columns: auto;
+		grid-template-columns: 1fr;
+		justify-content: center;
+		align-items: center;
 		grid-template-areas:
 			'one'
 			'two'
