--- a/src/components/Form/form.scss
+++ b/src/components/Form/form.scss
@@ -9,6 +9,9 @@ $bp-small: 41em; // 656px
 .contact-form {
 	grid-area: three;
 	padding-right: 10rem;
+	@media screen and (max-width: $bp-small) {
+		padding-right: 0;
+	}
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(7, auto);
@@ -16,7 +19,7 @@ $bp-small: 41em; // 656px
 	row-gap: 1.5rem;
 
 	& label {
-		font-size: 1.2rem;
+		font-size: 1.5rem;
 	}
 
 	&-input {
@@ -63,11 +66,11 @@ $bp-small: 41em; // 656px
 		width: 100%;
 		grid-column: 1 / 2;
 		grid-row: 4 / 5;
-	}
 
-	@media screen and (max-width: $bp-small) {
-		grid-column: 1 / span 2;
-		grid-row: 4 / 5;
+		@media screen and (max-width: $bp-small) {
+			grid-column: 1 / span 2;
+			grid-row: 4 / 5;
+		}
 	}
 
 	&-email-label {
