--- a/src/components/Reviews/reviews.scss
+++ b/src/components/Reviews/reviews.scss
@@ -42,11 +42,12 @@ $bp-small: 41em; // 656px
 	box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.2);
 }
 
-article h4 {
+.name {
+	font-size: 1.5rem;
+	font-weight: 500;
+	margin: 0.5rem 0;
 	text-transform: uppercase;
 	font-weight: 500;
-	margin-bottom: 0.25rem;
-	margin: 0.5rem 0;
 }
 .title {
 	text-transform: capitalize;
@@ -62,7 +63,7 @@ article h4 {
 	color: rgb(184, 180, 180);
 }
 .icon {
-	font-size: 3rem;
+	font-size: 4rem;
 	margin-top: 2rem;
 	color: #fdb533;
 }
@@ -74,12 +75,12 @@ article h4 {
 	transform: translateY(-50%);
 	background: rgb(184, 180, 180);
 	color: #3c3c3d;
-	width: 1.25rem;
-	height: 1.25rem;
+	width: 2.5rem;
+	height: 2.5rem;
 	display: grid;
 	place-items: center;
 	border-color: transparent;
-	font-size: 1rem;
+	font-size: 2rem;
 	border-radius: 0.25rem;
 	cursor: pointer;
 	transition: all 0.3s linear;
@@ -97,12 +98,6 @@ article h4 {
 @media (min-width: 800px) {
 	.text {
 		max-width: 45em;
-	}
-	.prev,
-	.next {
-		width: 2rem;
-		height: 2rem;
-		font-size: 1.5rem;
 	}
 }
 article {
