fix minor issues

--- a/src/components/Closing/closing.scss
+++ b/src/components/Closing/closing.scss
@@ -21,7 +21,7 @@ $bp-small: 41em; // 656px
 		font-weight: 900;
 		font-size: 7rem;
 		line-height: 6rem;
-		color: #fbd214;
+		color: #fdb533;
 		padding-bottom: 2rem;
 	}
 
